--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,14 +13,14 @@ jobs:
       - uses: anmol098/waka-readme-stats@master
         with:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
-          SHOW_PROFILE_VIEWS: false
-          SHOW_TOTAL_CODE_TIME: false
-          SHOW_COMMIT: false
-          SHOW_DAYS_OF_WEEK: false
-          SHOW_TIMEZONE: false
-          SHOW_LANGUAGE_PER_REPO: false
-          SHOW_SHORT_INFO: false
-          SHOW_LOC_CHART: false
+          SHOW_PROFILE_VIEWS: False
+          SHOW_TOTAL_CODE_TIME: False
+          SHOW_COMMIT: False
+          SHOW_DAYS_OF_WEEK: False
+          SHOW_TIMEZONE: False
+          SHOW_LANGUAGE_PER_REPO: False
+          SHOW_SHORT_INFO: False
+          SHOW_LOC_CHART: False
           
-          SHOW_EDITORS: true
-          SHOW_OS: true
+          SHOW_EDITORS: True
+          SHOW_OS: True
