--- a/.github/workflows/waka.yml
+++ b/.github/workflows/waka.yml
@@ -13,13 +13,14 @@ jobs:
       - uses: anmol098/waka-readme-stats@master
         with:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
-          SHOW_PROFILE_VIEWS: False
-          SHOW_TOTAL_CODE_TIME: False
-          SHOW_COMMIT: False
-          SHOW_DAYS_OF_WEEK: False
-          SHOW_TIMEZONE: False
-          SHOW_LANGUAGE_PER_REPO: False
-          SHOW_SHORT_INFO: False
-          SHOW_LOC_CHART: False
-          SHOW_EDITORS: True
-          SHOW_OS: True
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
+          SHOW_PROFILE_VIEWS: "False"
+          SHOW_TOTAL_CODE_TIME: "False"
+          SHOW_COMMIT: "False"
+          SHOW_DAYS_OF_WEEK: "False"
+          SHOW_TIMEZONE: "False"
+          SHOW_LANGUAGE_PER_REPO: "False"
+          SHOW_SHORT_INFO: "False"
+          SHOW_LOC_CHART: "False"
+          SHOW_EDITORS: "True"
+          SHOW_OS: "True"
