--- a/.github/workflows/wakatime.yml
+++ b/.github/workflows/wakatime.yml
@@ -23,5 +23,6 @@ jobs:
           SHOW_SHORT_INFO: "False"
           SHOW_LOC_CHART: "False"
           SHOW_PROJECTS: "False"
+          SHOW_UPDATED_DATE: "False"
           SHOW_EDITORS: "True"
           SHOW_OS: "True"
